deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kubernetes-challenge
  name: kubernetes-challenge
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: kubernetes-challenge
status:
  loadBalancer: {}
